--- a/Spaceshooter/Spaceshooter/Spaceshooter.vcxproj
+++ b/Spaceshooter/Spaceshooter/Spaceshooter.vcxproj
@@ -144,7 +144,6 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="ActiveBounds.cpp" />
-    <ClCompile Include="AsteroidsManager.cpp" />
     <ClCompile Include="camera.cpp" />
     <ClCompile Include="CollisionManager.cpp" />
     <ClCompile Include="Component.cpp" />
@@ -152,10 +151,12 @@
     <ClCompile Include="Component_Animator.cpp" />
     <ClCompile Include="Component_AsteroidCollider.cpp" />
     <ClCompile Include="Component_AsteroidController.cpp" />
+    <ClCompile Include="Component_AsteroidsManager.cpp" />
     <ClCompile Include="Component_CircleCollider.cpp" />
     <ClCompile Include="Component_Collider.cpp" />
     <ClCompile Include="Component_EnemyShipCollider.cpp" />
     <ClCompile Include="Component_EnemyShipController.cpp" />
+    <ClCompile Include="Component_EnemyShipsManager.cpp" />
     <ClCompile Include="Component_PlayerBulletCollider.cpp" />
     <ClCompile Include="Component_PlayerBulletController.cpp" />
     <ClCompile Include="Component_PlayerCollider.cpp" />
@@ -163,10 +164,9 @@
     <ClCompile Include="Component_PlayerInput.cpp" />
     <ClCompile Include="Component_RectangleCollider.cpp" />
     <ClCompile Include="Component_AudioEmitter.cpp" />
+    <ClCompile Include="Component_ScoreManager.cpp" />
     <ClCompile Include="Component_SpriteRenderer.cpp" />
-    <ClCompile Include="Component_Test.cpp" />
     <ClCompile Include="Component_Transform.cpp" />
-    <ClCompile Include="EnemyShipsManager.cpp" />
     <ClCompile Include="EngineException.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="GameObjectFactory.cpp" />
@@ -186,8 +186,6 @@
     <ClCompile Include="Scene_Level1.cpp" />
     <ClCompile Include="Scene_Level2.cpp" />
     <ClCompile Include="Scene_Level3.cpp" />
-    <ClCompile Include="Scene_LevelBase.cpp" />
-    <ClCompile Include="ScoreManager.cpp" />
     <ClCompile Include="Shapes.cpp" />
     <ClCompile Include="Time.cpp" />
     <ClCompile Include="vector2D.cpp" />
@@ -195,7 +193,6 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ActiveBounds.h" />
-    <ClInclude Include="AsteroidsManager.h" />
     <ClInclude Include="camera.h" />
     <ClInclude Include="CollisionManager.h" />
     <ClInclude Include="Component.h" />
@@ -203,10 +200,12 @@
     <ClInclude Include="Component_Animator.h" />
     <ClInclude Include="Component_AsteroidCollider.h" />
     <ClInclude Include="Component_AsteroidController.h" />
+    <ClInclude Include="Component_AsteroidsManager.h" />
     <ClInclude Include="Component_CircleCollider.h" />
     <ClInclude Include="Component_Collider.h" />
     <ClInclude Include="Component_EnemyShipCollider.h" />
     <ClInclude Include="Component_EnemyShipController.h" />
+    <ClInclude Include="Component_EnemyShipsManager.h" />
     <ClInclude Include="Component_InputReader.h" />
     <ClInclude Include="Component_PlayerBulletCollider.h" />
     <ClInclude Include="Component_PlayerBulletController.h" />
@@ -215,11 +214,10 @@
     <ClInclude Include="Component_PlayerInput.h" />
     <ClInclude Include="Component_RectangleCollider.h" />
     <ClInclude Include="Component_AudioEmitter.h" />
+    <ClInclude Include="Component_ScoreManager.h" />
     <ClInclude Include="Component_SpriteRenderer.h" />
-    <ClInclude Include="Component_Test.h" />
     <ClInclude Include="Component_Transform.h" />
     <ClInclude Include="Constants.h" />
-    <ClInclude Include="EnemyShipsManager.h" />
     <ClInclude Include="EngineException.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="GameObjectFactory.h" />
@@ -242,8 +240,6 @@
     <ClInclude Include="Scene_Level1.h" />
     <ClInclude Include="Scene_Level2.h" />
     <ClInclude Include="Scene_Level3.h" />
-    <ClInclude Include="Scene_LevelBase.h" />
-    <ClInclude Include="ScoreManager.h" />
     <ClInclude Include="Shapes.h" />
     <ClInclude Include="Time.h" />
     <ClInclude Include="vector2D.h" />
