--- a/Spaceshooter/Spaceshooter/Spaceshooter.vcxproj.filters
+++ b/Spaceshooter/Spaceshooter/Spaceshooter.vcxproj.filters
@@ -97,6 +97,12 @@
     <Filter Include="Source Files\Engine\Camera">
       <UniqueIdentifier>{7588f44e-102b-4bb7-b553-97595784267c}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\Debugging">
+      <UniqueIdentifier>{00e8c29e-a4a0-4227-a980-7188b808ba84}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Debugging">
+      <UniqueIdentifier>{88bab8ea-1035-4961-9fb1-c15e9cdd5c54}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="camera.cpp">
@@ -174,9 +180,6 @@
     <ClCompile Include="CollisionManager.cpp">
       <Filter>Source Files\Engine\CollisionManagement</Filter>
     </ClCompile>
-    <ClCompile Include="Component_Test.cpp">
-      <Filter>Source Files\Game\Components</Filter>
-    </ClCompile>
     <ClCompile Include="Component_Animator.cpp">
       <Filter>Source Files\Engine\Components\IndividualComponents</Filter>
     </ClCompile>
@@ -210,9 +213,6 @@
     <ClCompile Include="Component_PlayerBulletCollider.cpp">
       <Filter>Source Files\Game\Components</Filter>
     </ClCompile>
-    <ClCompile Include="ScoreManager.cpp">
-      <Filter>Source Files\Game\Scenes</Filter>
-    </ClCompile>
     <ClCompile Include="Component_PlayerCollider.cpp">
       <Filter>Source Files\Game\Components</Filter>
     </ClCompile>
@@ -234,17 +234,17 @@
     <ClCompile Include="Scene_Level3.cpp">
       <Filter>Source Files\Game\Scenes</Filter>
     </ClCompile>
-    <ClCompile Include="Scene_LevelBase.cpp">
-      <Filter>Source Files\Game\Scenes</Filter>
-    </ClCompile>
     <ClCompile Include="Logging.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\Debugging</Filter>
     </ClCompile>
-    <ClCompile Include="AsteroidsManager.cpp">
-      <Filter>Source Files\Game\Scenes</Filter>
+    <ClCompile Include="Component_ScoreManager.cpp">
+      <Filter>Source Files\Game\Components</Filter>
     </ClCompile>
-    <ClCompile Include="EnemyShipsManager.cpp">
-      <Filter>Source Files\Game\Scenes</Filter>
+    <ClCompile Include="Component_AsteroidsManager.cpp">
+      <Filter>Source Files\Game\Components</Filter>
+    </ClCompile>
+    <ClCompile Include="Component_EnemyShipsManager.cpp">
+      <Filter>Source Files\Game\Components</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -326,9 +326,6 @@
     <ClInclude Include="CollisionManager.h">
       <Filter>Header Files\Engine\CollisionManagement</Filter>
     </ClInclude>
-    <ClInclude Include="Component_Test.h">
-      <Filter>Header Files\Game\Components</Filter>
-    </ClInclude>
     <ClInclude Include="Component_Animator.h">
       <Filter>Header Files\Engine\Components\IndividualComponents</Filter>
     </ClInclude>
@@ -365,9 +362,6 @@
     <ClInclude Include="Component_PlayerBulletCollider.h">
       <Filter>Header Files\Game\Components</Filter>
     </ClInclude>
-    <ClInclude Include="ScoreManager.h">
-      <Filter>Header Files\Game\Scenes</Filter>
-    </ClInclude>
     <ClInclude Include="Component_PlayerCollider.h">
       <Filter>Header Files\Game\Components</Filter>
     </ClInclude>
@@ -389,23 +383,23 @@
     <ClInclude Include="Constants.h">
       <Filter>Header Files\Engine\Misc</Filter>
     </ClInclude>
-    <ClInclude Include="Debugging.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Scene_Level3.h">
       <Filter>Header Files\Game\Scenes</Filter>
     </ClInclude>
-    <ClInclude Include="Scene_LevelBase.h">
-      <Filter>Header Files\Game\Scenes</Filter>
-    </ClInclude>
-    <ClInclude Include="AsteroidsManager.h">
-      <Filter>Header Files\Game\Scenes</Filter>
+    <ClInclude Include="Debugging.h">
+      <Filter>Header Files\Debugging</Filter>
     </ClInclude>
     <ClInclude Include="Logging.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\Debugging</Filter>
     </ClInclude>
-    <ClInclude Include="EnemyShipsManager.h">
-      <Filter>Header Files\Game\Scenes</Filter>
+    <ClInclude Include="Component_ScoreManager.h">
+      <Filter>Header Files\Game\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="Component_AsteroidsManager.h">
+      <Filter>Header Files\Game\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="Component_EnemyShipsManager.h">
+      <Filter>Header Files\Game\Components</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
