--- a/Spaceshooter/Spaceshooter/Spaceshooter.vcxproj
+++ b/Spaceshooter/Spaceshooter/Spaceshooter.vcxproj
@@ -258,6 +258,7 @@
     <ClInclude Include="Scene_Level2.h" />
     <ClInclude Include="Scene_Level3.h" />
     <ClInclude Include="Shapes.h" />
+    <ClInclude Include="Sprites.h" />
     <ClInclude Include="StartScheduler.h" />
     <ClInclude Include="Time.h" />
     <ClInclude Include="vector2D.h" />
